fix(pf4): Added load options to downshift select

--- a/packages/pf4-component-mapper/src/common/select/select-styles.scss
+++ b/packages/pf4-component-mapper/src/common/select/select-styles.scss
@@ -3,6 +3,10 @@
   100% { transform: rotate(360deg); }
 }
 
+.ddorg__pf4-component-mapper__select-loading-icon {
+  animation: spin 2s linear infinite;
+}
+
 .ddorg__pf4-component-mapper__select {
   &.single-select {
     .ddorg__pf4-component-mapper__select__placeholder {
